updaed cser to index.html

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <h1>SGSITS, Indore- Resources</h1>
-                        <p class="lead">Website designed and developed by <a href="https://linkedin.com/in/vikasuperman/" style="color: #212121" target="_blank">vikasyadav</a></p>
+                            <p class="lead">Website designed and developed by Rajshri Singh Baghel</p>
                     </div>
                     <div class="col-sm-6">
                         <p class="text-info text-right">
